# ai-study-assistant

./: .gitignore  PROJECT_SUMMARY.md  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: citation_utils.py  database.py  session_utils.py
backend/app/evaluation/: __init__.py  answer_quality.py  retrieval.py
backend/app/models/: schemas.py
backend/app/routers/: backup.py  chat.py  collections.py  documents.py  knowledge_graph.py  multi_agent.py  quiz.py  settings.py
backend/app/services/: chunker.py  citation_validator.py  context_utils.py  embedder.py  generator.py  image_extractor.py  knowledge_graph.py  model_catalog.py  parser.py  quality.py  query_planner.py  rag.py  reranker.py  retriever.py  vectorstore.py
backend/app/services/agents/: __init__.py  base.py  examiner.py  summarizer.py  supervisor.py  tutor.py
backend/eval/: answer_quality.example.jsonl  retrieval.baseline.summary.json  retrieval.example.jsonl  retrieval.golden.jsonl  retrieval_multihop.golden.jsonl
backend/eval/corpora/: machine_learning_basics.jsonl
backend/tests/: conftest.py  test_answer_evaluation.py  test_config.py  test_evaluation.py
backend/tests/test_routers/: test_chat.py  test_collections.py  test_documents.py  test_settings.py
backend/tests/test_services/: test_chunker.py  test_generator.py  test_model_catalog.py  test_query_planner.py  test_retriever.py
docs/: EVALUATION.md  PRD.md  TECHNICAL_DESIGN.md
frontend/: .prettierignore  (+8 more)
(+25 files in other folders)
